[metadata]
name = hmv-onecall
version = 0.0.1
author = joshy joy
author_email = joshyjoy999@gmail.com
description = For crypto algorithm trading
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshy-joy/onecall-python-package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True